//==============================================================================
//  @file       sql_archive_transaction_checksum.proto
//  @ingroup    proto database interface
//  @brief	Operations on transactions
//
//  Messages for archive transactions
//
//  @author     Bart Houkes
//
//------------------------------------------------------------------------------
//  Copyright (c) Bart Houkes, 24-11-2024
//
//  Copyright notice:
//  This software is property of Bart Houkes.
//  Unauthorized duplication and disclosure to third parties is forbidden.
//============================================================================*/

syntax = "proto3";

option csharp_namespace = "GrpcService";

package atc;

import "common_types.proto";

// Add these Kotlin-specific options
option java_multiple_files = true;
option java_package = "com.hha.archive.checksum";

service ArchiveTransactionChecksumService
{
    rpc Checksum(ChecksumRequest)  returns (common.Empty) {}
    rpc CopyChecksum(CopyChecksumRequest)  returns (common.Empty) {}
}

message CopyChecksumRequest
{
    string table = 1;
    int32 transaction_id = 2;
}

message ChecksumRequest
{
    int32 transaction_id = 1;
}

